--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "13.5.4",
