--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "query-string": "^9.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
