--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "13.5.4",
     "query-string": "^9.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
